force-app/main/default/objects/School__c/fields/Principal_Email_id__c.field-meta.xml
<CustomField>
    <fullName>Principal_Email_id__c</fullName>
    <label>Principal Email id</label>
    <type>Email</type>
</CustomField>