force-app/main/default/objects/School__c/fields/Principal_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Principal_Mobile__c</fullName>
    <label>Principal Mobile</label>
    <type>Phone</type>
</CustomField>