force-app/main/default/objects/School__c/fields/School_City__c.field-meta.xml
<CustomField>
    <fullName>School_City__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>School City</label>
    <referenceTo>City__c</referenceTo>
    <relationshipLabel>School_City</relationshipLabel>
    <relationshipName>School_City</relationshipName>
    <type>Lookup</type>
</CustomField>