force-app/main/default/objects/School__c/fields/School_Country__c.field-meta.xml
<CustomField>
    <fullName>School_Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>School Country</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>School Country</relationshipLabel>
    <relationshipName>School_Country</relationshipName>
    <type>Lookup</type>
</CustomField>