force-app/main/default/objects/School__c/fields/School_State__c.field-meta.xml
<CustomField>
    <fullName>School_State__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>School State</label>
    <referenceTo>State__c</referenceTo>
    <relationshipLabel>School State</relationshipLabel>
    <relationshipName>School_State</relationshipName>
    <type>Lookup</type>
</CustomField>