force-app/main/default/objects/School__c/fields/School_Telephone__c.field-meta.xml
<CustomField>
    <fullName>School_Telephone__c</fullName>
    <label>School Telephone</label>
    <type>Phone</type>
</CustomField>