force-app/main/default/objects/School__c/fields/School_Type__c.field-meta.xml
<CustomField>
    <fullName>School_Type__c</fullName>
    <label>School Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>College</fullName>
            </value>
            <value>
                <fullName>Institute</fullName>
            </value>
            <value>
                <fullName>School</fullName>
            </value>
            <value>
                <fullName>University</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>