force-app/main/default/objects/School__c/fields/School_Zipcode__c.field-meta.xml
<CustomField>
    <fullName>School_Zipcode__c</fullName>
    <label>School Zipcode</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>