force-app/main/default/objects/School__c/fields/University_Board__c.field-meta.xml
<CustomField>
    <fullName>University_Board__c</fullName>
    <label>University / Board</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mumbai University</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>